# timestar

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitmodules  AGGREGATION_PERFORMANCE_FIX.md  BATCH_READ_OPTIMIZATION_RESULTS.md  BENCHMARKS.md  BLOOM_FILTER_DYNAMIC_SIZING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEBASE_REVIEW.md  CODEBASE_REVIEW_2026_03_19.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  NOTES  README.md  STYLE_GUIDE.md  analyze_results.sh  check_indexed_series.js  ci-test.Dockerfile  debug_delete.js  detailed_analysis.js  docker-compose.yml  fix_debug_logging.sh  profile_insert.sh  profile_insert_advanced.sh  profile_insert_fixed.sh  query_result.json  run_api_tests.sh  test_aggregation_query.json  test_perf.sh  timestar.toml
lib/: CMakeLists.txt  aligned_buffer.cpp  aligned_buffer.hpp  bool_encoder.cpp  bool_encoder.hpp  compressed_buffer.cpp  compressed_buffer.hpp  engine.cpp  engine.hpp  final_encoder_test  float_encoder.cpp  integer_encoder.cpp  integer_encoder.hpp  memory_store.cpp  memory_store.hpp  pch.hpp  query_result.hpp  query_runner.cpp  query_runner.hpp  simple8b.cpp  simple8b.hpp  slice_buffer.hpp  tsdb_value.hpp  tsm.cpp  tsm.hpp  tsm_file_manager.cpp  tsm_file_manager.hpp  tsm_writer.cpp  tsm_writer.hpp  tsxor_encoder.cpp  tsxor_encoder.hpp  util.hpp  wal.cpp  wal.hpp  zigzag.hpp
lib/cluster/: scatter_gather.hpp
lib/config/: timestar_config.cpp  timestar_config.hpp  tsdb_config.cpp  tsdb_config.hpp
lib/core/: engine.cpp  engine.hpp  engine_metrics.cpp  engine_metrics.hpp  field_values.hpp  placement_table.cpp  placement_table.hpp  series_id.cpp  series_id.hpp  timestar_value.hpp  value_coercion.hpp  value_type_dispatch.hpp  yield_policy.hpp
lib/encoding/: bool_encoder.cpp  bool_encoder.hpp  bool_encoder_rle.cpp  bool_encoder_rle.hpp  float_encoder.cpp  float_encoder.hpp  float_encoder_auto.hpp  integer_encoder.cpp  integer_encoder.hpp  simple16.cpp  simple16.hpp  simple8b.cpp  simple8b.hpp  simple8b_exception.hpp  simple8b_extended.hpp  string_encoder.cpp  string_encoder.hpp  tsxor_encoder.cpp  tsxor_encoder.hpp  zigzag.hpp  zigzag_simd.cpp  zigzag_simd.hpp
lib/functions/: arithmetic_functions.cpp  arithmetic_functions.hpp  function_http_handler.cpp  function_http_handler.hpp  function_http_handler_complex.hpp.bak  function_interface.hpp  function_monitoring.cpp  function_monitoring.hpp  function_pipeline_executor.cpp  function_pipeline_executor.hpp  function_query_parser.cpp  function_query_parser.hpp  function_registry.cpp  function_registry.hpp  function_security.cpp  function_security.hpp  function_types.hpp  function_utils.cpp  function_utils.hpp  interpolation_functions.cpp  interpolation_functions.hpp  series_alignment.cpp  series_alignment.hpp  smoothing_functions.cpp  smoothing_functions.hpp  vectorized_series.cpp  vectorized_series.hpp
lib/http/: content_negotiation.cpp  content_negotiation.hpp  http_auth.cpp  http_auth.hpp  http_delete_handler.cpp  http_delete_handler.hpp  http_derived_query_handler.cpp  http_derived_query_handler.hpp  http_error.hpp  http_metadata_handler.cpp  http_metadata_handler.hpp  http_query_handler.cpp  http_query_handler.hpp  http_response.hpp  http_retention_handler.cpp  http_retention_handler.hpp  http_routes.hpp  http_stream_handler.cpp  http_stream_handler.hpp  http_write_handler.cpp  http_write_handler.hpp  proto_converters.cpp  proto_converters.hpp  proto_write_fast_path.cpp  proto_write_fast_path.hpp  response_formatter.cpp  response_formatter.hpp
lib/index/: index_backend.hpp  key_encoding.cpp  key_encoding.hpp  key_encoding_simd.cpp  key_encoding_simd.hpp  leveldb_index.cpp  leveldb_index.hpp  metadata_index.cpp  metadata_index.hpp  metadata_index_sync.cpp  metadata_index_sync.hpp  schema_update.hpp
lib/query/: aggregator.cpp  aggregator.hpp  block_aggregator.hpp  derived_query.hpp  derived_query_executor.cpp  derived_query_executor.hpp  expression_ast.hpp  expression_evaluator.cpp  expression_evaluator.hpp  expression_parser.cpp  expression_parser.hpp  query_parser.cpp  query_parser.hpp  query_planner.cpp  query_planner.hpp  query_result.hpp  query_runner.cpp  query_runner.hpp  series_aligner.cpp  series_aligner.hpp  series_matcher.cpp  series_matcher.hpp  shard_query.hpp  simd_aggregator.cpp  simd_aggregator.hpp  simd_helpers.hpp  streaming_aggregator.cpp  streaming_aggregator.hpp  streaming_derived_evaluator.cpp  streaming_derived_evaluator.hpp  subscription_manager.cpp  subscription_manager.hpp  tdigest.hpp  topk_filter.hpp
lib/retention/: retention_policy.hpp
lib/storage/: aligned_buffer.cpp  aligned_buffer.hpp  batch_pool.hpp  bloom_filter.hpp  bloom_filter_simd.cpp  bloom_filter_simd.hpp  bulk_block_loader.hpp  compaction_pipeline.hpp  compressed_buffer.cpp  compressed_buffer.hpp  memory_store.cpp  memory_store.hpp  series_compaction_data.hpp  shard_rebalancer.cpp  shard_rebalancer.hpp  slice_buffer.hpp  tsm.cpp  tsm.hpp  tsm_block_iterator.hpp  tsm_compactor.cpp  tsm_compactor.hpp  tsm_file_manager.cpp  tsm_file_manager.hpp  tsm_merge_specialized.hpp  tsm_reader.hpp  tsm_result.hpp  tsm_tombstone.cpp  tsm_tombstone.hpp  tsm_tombstone_integration.cpp  tsm_writer.cpp  tsm_writer.hpp  wal.cpp  wal.hpp  wal_file_manager.cpp  wal_file_manager.hpp
lib/utils/: crc32.hpp  data_dir_lock.cpp  data_dir_lock.hpp  group_key.hpp  json_escape.hpp  line_parser.cpp  line_parser.hpp  logger.hpp  logging_config.hpp  lru_cache.hpp  series_key.hpp  stop_signal.hpp  util.hpp
proto/: CMakeLists.txt  timestar.proto
test/: CMakeLists.txt  README.md  debug_hash.js  final_encoder_test.cpp  main.cpp  run_all_tests.sh  run_e2e_tests.sh  run_string_tests.sh  seastar_gtest.hpp  test_helpers.hpp  tsdb_test[1]_include.cmake  tsdb_test[1]_tests.cmake
test/benchmark/: CMakeLists.txt  aggregator_performance_benchmark.cpp  aligned_buffer_benchmark.cpp  aligned_buffer_comparison.cpp  aligned_buffer_final.cpp  alp_gorilla_comparison_benchmark.cpp  anomaly_detection_benchmark.cpp  avx512_optimization_test.cpp  avx512_report.cpp  bit_operations_benchmark.cpp  (+19 more)
(+641 files in other folders)
